<resources>
    <string name="app_name">Web browser</string>
    <string name="enter_url_hint">stackoveflow.com</string>
    <string name="tabs">1</string>
    <string name="refresh_button">Refresh Button</string>
    <string name="go_button">Go Button</string>
    <string name="settings_button">Settings Button</string>

    <!--    home fragment -->
    <string name="search_hint">stackoveflow.com</string>

    <!--    tools -->
    <string name="back_button">Back button</string>
    <string name="forward_button_text">Forward button</string>
    <string name="desktop_button_text">Desktop button</string>
    <string name="bookmark_button_text">Bookmark button</string>
    <string name="save_button_text">Save button</string>
    <string name="fullscrenn_button_text">Fullscreen button</string>

    <!--    Bookmarks-->
    <string name="bookmark_g">G</string>
    <string name="bookmark_text">Bookmark</string>
    <string name="bookmark_name">Bookmark name</string>
    <string name="bookmark_title">Add bookmark</string>
    <string name="bookmark_add_button">Add</string>
    <string name="bookmark_cancel_button">Cancel</string>
    <string name="bookmark_message">Url: www.google.com</string>
    <string name="bookmark_remove">Remove bookmark</string>
    <string name="bookmark_remove_button">Remove</string>
    <string name="bookmarks_view_all">View all</string>
    <string name="bookmarks_all_title">Bookmarks</string>

    <!--    Tabs -->
    <string name="no_website_to_save">No website to save</string>
    <string name="internet_error">No Interned connected</string>
    <string name="tabs_home">Home</string>
    <string name="google_site">Google</string>
    <string name="tabs_title">Select Tab</string>
    <string name="error_tab_remove">Cant remove this tab</string>

    <!--    Long press menu-->
    <string name="new_tab_long_press">Open in new tab</string>
    <string name="in_background_long_press">Open in background</string>
    <string name="show_image_long_press">Show image</string>
    <string name="save_image_long_press">Save image</string>
    <string name="share_long_press">Share</string>
    <string name="close_long_press">Close</string>
    <string name="link_error_long_press">Not valid link</string>
    <string name="share_alert_long_press">Sharing url</string>
    <string name="save_image_alert_long_press">Image saved</string>


</resources>