<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/primary_light"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/backButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:text="@string/back_button"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:icon="@drawable/ic_arrow_back"
            app:iconGravity="top" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/forwardButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:text="@string/forward_button_text"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:icon="@drawable/ic_arrow_forward"
            app:iconGravity="top" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:text="@string/save_button_text"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:icon="@drawable/ic_save"
            app:iconGravity="top" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bookmarkButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:text="@string/bookmark_button_text"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:icon="@drawable/ic_bookmark"

            app:iconGravity="top" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/desktopButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:text="@string/desktop_button_text"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:icon="@drawable/ic_desktop"
            app:iconGravity="top" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fullscreenButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:text="@string/fullscrenn_button_text"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:icon="@drawable/ic_fullscreen"
            app:iconGravity="top" />


    </LinearLayout>

</LinearLayout>