<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/webIcon"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_search"
                android:tint="@color/teal_light_dark"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/topSearchBar"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/enter_url_hint"
                tools:hint="@string/enter_url_hint"
                android:paddingHorizontal="5dp"
                android:singleLine="true"
                android:textColorHint="#757575"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tabsBtn"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="4dp"
                android:layout_marginVertical="8dp"
                android:gravity="center"
                android:text="@string/tabs"
                android:textColor="@color/black"
                tools:ignore="RedundantDescriptionCheck" />

            <ImageButton
                android:id="@+id/refreshBtn"
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/refresh_button"
                android:src="@drawable/ic_refresh"
                tools:ignore="RedundantDescriptionCheck" />

            <ImageButton
                android:id="@+id/goBtn"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/go_button"
                android:src="@drawable/ic_arrow_forward"
                tools:ignore="RedundantDescriptionCheck" />

        </LinearLayout>

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleY="1.5"
            android:visibility="gone"/>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/settingBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_settings"
        android:contentDescription="@string/settings_button"
        app:backgroundTint="@color/green_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95"
        tools:ignore="RedundantDescriptionCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>